--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,13 @@
 .App-link {
   color: #61dafb;
 }
+.App-logo {
+  width: 200px;
+  background: -webkit-linear-gradient(
+    0deg,
+    #9caeff,
+    #7effe7
+  ); /* set gradation for background*/
+  -webkit-background-clip: text; /* hollow out with text*/
+  -webkit-text-fill-color: transparent; /* show background for hollowed out part*/
+}
