--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,5 +1,5 @@
 .Dictionary section {
-  background-color: #95dac1;
+  background-color: #fff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 8px 6px 8px rgba(0, 0, 30, 0.6);
