--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,10 +1,18 @@
 .Speaker-logo {
   background-color: #fff;
+  color: #67cfa9;
   border: solid 1px #7f7c82;
   padding: 18px 15px;
   border-radius: 65px;
+  transition: all 15ms;
   width: 30px;
 }
 .Speaker-logo:hover {
   transform: scale(0.96);
+  background-color: #67cfa9;
+  color: #fff;
+}
+
+.Phonetic {
+  opacity: 0.8;
 }
