--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #b9e4d4;
+}
+
 .App {
   max-width: 800px;
   padding: 20px;
@@ -7,10 +11,6 @@
 
 .App-logo {
   width: 130px;
-}
-
-.App-header {
-  background-color: #fff;
 }
 
 .App-link {
