--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,9 @@
+.Dictionary h1 {
+  font-size: 22px;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
 .Dictionary section {
   background-color: #fff;
   padding: 20px;
@@ -8,7 +14,7 @@
 
 .input-window {
   padding: 3px 20px;
-  margin: 20px 0 0;
+  margin: 0;
   font-size: 20px;
 }
 
