changed bg color

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;400;500;600;700&display=swap");
+
 .App {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   font-size: 18px;
   line-height: 1.4;
+}
+.App h1 {
+  font-family: "Exo 2", sans-serif;
 }
 
 .App-link {
