--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Road+Rage&display=swap");
 
 .App {
   max-width: 800px;
@@ -8,19 +8,23 @@
   line-height: 1.4;
 }
 .App h1 {
-  font-family: "Exo 2", sans-serif;
-}
-
-.App-link {
-  color: #61dafb;
+  font-family: "Road Rage", cursive;
+  font-size: 50px;
+  font-weight: 800;
 }
 .App-logo {
   width: 120px;
-  color: orange;
+}
+.App-link {
+  color: #61dafb;
 }
 
 .App-footer {
   font-size: 14px;
   padding: 20px;
   text-align: center;
+}
+
+body {
+  background-color: #272142;
 }
