--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -6,7 +6,7 @@
 }
 
 .Dictionary section {
-  background-color: #8d6c9f;
+  background-color: #e6dcff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 8px 6px 8px rgba(0, 0, 30, 0.6);
