--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,7 +1,7 @@
 .phonetic-button {
   text-decoration: none;
   background-color: #fff;
-  color: #ffb1b1;
+  color: #ed7899;
   border: solid 1px #7f7c82;
   padding: 15px 22px;
   margin: 20px 20px;
@@ -10,7 +10,7 @@
 }
 .phonetic-button:hover {
   transform: scale(0.98);
-  background-color: #ffb1b1;
+  background-color: #ed7899;
   color: #fff;
 }
 
